--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -31,10 +31,13 @@
                 @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Movies[0].Genre)
+                @Html.DisplayNameFor(model => model.Movies[0].)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Movies[0].Price)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Movies[0].Rating)
             </th>
             <th></th>
         </tr>
