--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -31,14 +31,14 @@
                 @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Movies[0].)
+                @Html.DisplayNameFor(model => model.Movies[0].Genre)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Movies[0].Price)
             </th>
-             <th>
+             @* <th>
                 @Html.DisplayNameFor(model => model.Movies[0].Rating)
-            </th>
+            </th> *@
             <th></th>
         </tr>
     </thead>
